--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,30 @@
-# This is a basic workflow to help you get started with Actions
+name: Sync to Bitbucket
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  # push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+  # Se ejecuta cuando hay push a main
+  push:
+    branches: [ "main" ]
+  # También permite ejecución manual
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  sync:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+        with:
+          fetch-depth: 0  # Necesitamos todo el historial
+      
+      # Configurar las credenciales de Bitbucket
+      - name: Sync to Bitbucket
+        env:
+          # Necesitarás configurar estos secrets en tu repositorio de GitHub
+          BITBUCKET_USERNAME: ${{ secrets.BITBUCKET_USERNAME }}
+          BITBUCKET_APP_PASSWORD: ${{ secrets.BITBUCKET_APP_PASSWORD }}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          # Añadir el remote de Bitbucket
+          git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_APP_PASSWORD@@bitbucket.org:analitikacloud/destino-repo.git
+
+          # Push a Bitbucket
+          git push bitbucket --all --force
+          git push bitbucket --tags --force
