--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,10 @@ name: Sync to Bitbucket
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - desa
+      - cert
   workflow_dispatch:
 
 jobs:
@@ -12,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
-      - name: Sync to Bitbucket (excluding workflows)
+          
+      - name: Sync to Bitbucket (current branch)
         env:
           BITBUCKET_USERNAME: ${{ secrets.BITBUCKET_USERNAME }}
           BITBUCKET_APP_PASSWORD: ${{ secrets.BITBUCKET_APP_PASSWORD }}
@@ -22,18 +25,21 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git config --global user.name "ACloud DevOps"
           
-          # Forzar la eliminación de los archivos de workflow
+          # Obtener el nombre de la rama actual
+          CURRENT_BRANCH=${GITHUB_REF#refs/heads/}
+          
+          # Eliminar workflows
           rm -rf .github/workflows/
           
-          # Crear una rama temporal y hacer commit de los cambios
-          git checkout -b temp-sync
+          # Crear rama temporal
+          git checkout -b temp-sync-$CURRENT_BRANCH
           git add -A
           git commit -m "chore: remove workflows for Bitbucket sync [skip ci]"
           
           # Push a Bitbucket
           git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_APP_PASSWORD@bitbucket.org/analitikacloud/destino-repo.git
-          git push bitbucket temp-sync:main --force
+          git push bitbucket temp-sync-$CURRENT_BRANCH:$CURRENT_BRANCH --force
           
           # Limpiar
-          git checkout main
-          git branch -D temp-sync
+          git checkout $CURRENT_BRANCH
+          git branch -D temp-sync-$CURRENT_BRANCH
