--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,11 +28,17 @@ jobs:
           CURRENT_BRANCH=${GITHUB_REF#refs/heads/}
           echo "📦 Sincronizando rama: $CURRENT_BRANCH"
           
-          # Crear rama temporal desde el último commit
+          # Crear rama temporal
           echo "🔄 Creando rama temporal..."
           git checkout -b temp-sync-$CURRENT_BRANCH
           
-          # Reescribir el historial de commits con el autor deseado
+          # Eliminar workflows
+          echo "🗑️ Eliminando directorio workflows..."
+          rm -rf .github/workflows/
+          git add -A
+          git commit --no-verify -m "temp commit"
+          
+          # Reescribir el historial con el autor deseado
           git filter-branch -f --env-filter '
           export GIT_COMMITTER_NAME="ACloud DevOps"
           export GIT_COMMITTER_EMAIL="bot@analitika.cloud"
@@ -40,15 +46,10 @@ jobs:
           export GIT_AUTHOR_EMAIL="bot@analitika.cloud"
           ' HEAD
           
-          # Eliminar workflows sin crear un nuevo commit
-          echo "🗑️ Eliminando directorio workflows..."
-          rm -rf .github/workflows/
-          git update-index --skip-worktree .github/workflows/
-          
-          # Push a Bitbucket con el historial reescrito
+          # Push a Bitbucket
           echo "⬆️ Realizando push a Bitbucket..."
           git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_APP_PASSWORD@bitbucket.org/analitikacloud/destino-repo.git
-          git push bitbucket HEAD:$CURRENT_BRANCH --force
+          git push bitbucket temp-sync-$CURRENT_BRANCH:$CURRENT_BRANCH --force
           
           # Limpiar
           echo "🧹 Limpiando..."
