--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,28 +25,24 @@ jobs:
           BITBUCKET_APP_PASSWORD: ${{ secrets.BITBUCKET_APP_PASSWORD }}
         run: |
           # Configurar Git
-          git config --global user.email "bot@analitika.cloud"
-          git config --global user.name "Analitika Cloud"
+          git config --global user.name "Analitika Cloud" && git config --global user.email "bot@analitika.cloud"
           
           # Obtener nombre de la rama actual
           CURRENT_BRANCH=${GITHUB_REF#refs/heads/}
-          echo "📦 Sincronizando rama: $CURRENT_BRANCH"
+          echo "Sincronizando rama: $CURRENT_BRANCH"
           
-          # Ignorar workflows
-          echo "🔄 Preparando contenido..."
-          git filter-branch --prune-empty --tree-filter 'rm -rf .github/workflows' --tag-name-filter cat -- --all
+          # Eliminar workflows sin crear rama temporal
+          rm -rf .github/workflows/
           
-          # Reescribir autores
-          git filter-branch --env-filter '
-          export GIT_AUTHOR_NAME="Analitika Cloud"
-          export GIT_AUTHOR_EMAIL="bot@analitika.cloud"
+          # Configurar autor para todos los commits
           export GIT_COMMITTER_NAME="Analitika Cloud"
           export GIT_COMMITTER_EMAIL="bot@analitika.cloud"
-          ' -- --all
+          export GIT_AUTHOR_NAME="Analitika Cloud"
+          export GIT_AUTHOR_EMAIL="bot@analitika.cloud"
           
-          # Push a Bitbucket
-          echo "⬆️ Realizando push a Bitbucket..."
+          # Reescribir historia
+          git filter-branch --env-filter 'export GIT_AUTHOR_NAME="Analitika Cloud" export GIT_AUTHOR_EMAIL="bot@analitika.cloud" export GIT_COMMITTER_NAME="Analitika Cloud" export GIT_COMMITTER_EMAIL="bot@analitika.cloud"' -- --all
+          
+          # Push directo a Bitbucket
           git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_APP_PASSWORD@bitbucket.org/analitikacloud/destino-repo.git
-          git push bitbucket $CURRENT_BRANCH:$CURRENT_BRANCH --force
-          
-          echo "✅ Sincronización completada exitosamente"
+          git push bitbucket HEAD:$CURRENT_BRANCH --force
