--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,11 @@ on:
 jobs:
   mirror-to-bitbucket:
     runs-on: ubuntu-latest
+    env:
+      # Variables personalizables con valores por defecto
+      GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME || 'Acloud DevOps' }}
+      GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL || 'devops@analitika.cloud' }}
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,8 +25,10 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          echo "Configurando identidad de Git..."
+          git config --global user.name "${{ env.GIT_COMMITTER_NAME }}"
+          git config --global user.email "${{ env.GIT_COMMITTER_EMAIL }}"
+          echo "✅ Git configurado con usuario: ${{ env.GIT_COMMITTER_NAME }}"
 
       - name: Push to Bitbucket
         env:
