--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,11 +12,6 @@ on:
 jobs:
   mirror-to-bitbucket:
     runs-on: ubuntu-latest
-    env:
-      GIT_COMMITTER_NAME: "Acloud DevOps"
-      GIT_COMMITTER_EMAIL: "devops@analitika.cloud"
-      GIT_AUTHOR_NAME: "Acloud DevOps"
-      GIT_AUTHOR_EMAIL: "devops@analitika.cloud"
     
     steps:
       - name: Checkout repository
@@ -26,46 +21,33 @@ jobs:
 
       - name: Configure Git
         run: |
-          # Configuración global de git
-          git config --global user.name "$GIT_AUTHOR_NAME"
-          git config --global user.email "$GIT_AUTHOR_EMAIL"
-          
-          # Configuración específica del repositorio
-          git config user.name "$GIT_AUTHOR_NAME"
-          git config user.email "$GIT_AUTHOR_EMAIL"
-          
-          # Verificar la configuración
-          echo "✅ Configuración de Git actual:"
-          git config --list | grep user
+          # Solo configuramos el committer, mantenemos el autor original
+          git config --global committer.name "Acloud DevOps"
+          git config --global committer.email "devops@analitika.cloud"
 
       - name: Push to Bitbucket
         env:
           BITBUCKET_USERNAME: ${{ secrets.BITBUCKET_USERNAME }}
           BITBUCKET_APP_PASSWORD: ${{ secrets.BITBUCKET_APP_PASSWORD }}
           BITBUCKET_REPO: analitikacloud/destino-repo
+          GIT_COMMITTER_NAME: "Acloud DevOps"
+          GIT_COMMITTER_EMAIL: "devops@analitika.cloud"
         run: |
-          # Configurar el remote con credenciales
           echo "Configurando remote de Bitbucket..."
           git remote remove bitbucket || true
           git remote add bitbucket "https://$BITBUCKET_USERNAME:$BITBUCKET_APP_PASSWORD@bitbucket.org/$BITBUCKET_REPO.git"
           
-          # Push con variables de entorno específicas para el autor
-          echo "Sincronizando con identidad configurada..."
-          GIT_COMMITTER_NAME="$GIT_AUTHOR_NAME" \
-          GIT_COMMITTER_EMAIL="$GIT_AUTHOR_EMAIL" \
-          GIT_AUTHOR_NAME="$GIT_AUTHOR_NAME" \
-          GIT_AUTHOR_EMAIL="$GIT_AUTHOR_EMAIL" \
+          echo "Sincronizando ramas manteniendo autores originales..."
+          # Push preservando autores originales
           git push bitbucket --all --force
           
           echo "Sincronizando tags..."
-          GIT_COMMITTER_NAME="$GIT_AUTHOR_NAME" \
-          GIT_COMMITTER_EMAIL="$GIT_AUTHOR_EMAIL" \
-          GIT_AUTHOR_NAME="$GIT_AUTHOR_NAME" \
-          GIT_AUTHOR_EMAIL="$GIT_AUTHOR_EMAIL" \
           git push bitbucket --tags --force
           
           if [ $? -eq 0 ]; then
             echo "✅ Sincronización completada exitosamente"
+            echo "Los commits mantienen sus autores originales"
+            echo "Committer configurado como: $GIT_COMMITTER_NAME"
           else
             echo "❌ Error en la sincronización"
             exit 1
